k8s/k8s-ingress-migration/ingress-charts/gatewayclass-haproxy.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: haproxy
spec:
  controllerName: haproxy.org/gateway-controller
