k8s/k8s-ingress-migration/ingress-charts/httproute-haproxy.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: my-nginx-haproxy-route
  namespace: default
spec:
  parentRefs:
    - name: haproxy-gateway
  hostnames:
    - "myapp.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: my-nginx
          port: 80
